k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dpos-network
  labels:
    name: dpos-network
    app: dpos-validator
